# OBS-studio-webrtc

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  CMakePresets.json  CTestConfig.cmake  README  README.md  README.rst  appveyor.yml  azure-pipelines.yml
plugins/: CMakeLists.txt
plugins/aja/: CMakeLists.txt
plugins/coreaudio-encoder/: encoder.cpp  windows-imports.h
plugins/decklink/: util.cpp  util.hpp
plugins/linux-capture/: CMakeLists.txt  xshm-input.c
plugins/linux-pipewire/: pipewire.c
plugins/mac-avcapture/: CMakeLists.txt
plugins/mac-avcapture/data/locale/: ro-RO.ini
plugins/mac-capture/: CMakeLists.txt
plugins/mac-virtualcam/src/common/: MachProtocol.h
plugins/mac-virtualcam/src/dal-plugin/: CMakeLists.txt  Info.plist  OBSDALPlugIn.mm  OBSDALStream.mm
plugins/mac-vth264/: encoder.c
plugins/obs-filters/: CMakeLists.txt  linux_linker_script
plugins/obs-outputs/: AudioDeviceModuleWrapper.cpp  AudioDeviceModuleWrapper.h  CMakeLists.txt  RTCStatsCollectorCallbackBridge.h  SDPModif.h  VideoCapture.h  VideoCapturer.cpp  VideoCapturer.h  WebRTCStream.cpp  WebRTCStream.h  WebsocketClient.h  evercast-stream.cpp  evercast-stream.h  flv-mux.c  flv-mux.h  flv-output.c  ftl-stream.c  janus-stream.cpp  janus-stream.h  millicast-stream.cpp  millicast-stream.h  obs-output-ver.h  obs-outputs.c  obsWebrtcAudioSource.cpp  obsWebrtcAudioSource.h  rtmp-helpers.h  rtmp-stream.c  rtmp-stream.cpp  spankchain-stream.cpp  spankchain-stream.h  useless_cc_network_controller.cpp  useless_cc_network_controller.h  useless_network_factory.cpp  useless_network_factory.h  webrtc-custom-stream.cpp  webrtc-custom-stream.h  webrtc_pc_factory_di_helpers.h  wowza-stream.cpp  wowza-stream.h
plugins/obs-outputs/cmake/: legacy.cmake
plugins/obs-outputs/data/locale/: gl-ES.ini  sl-SI.ini  uk-UA.ini
plugins/obs-outputs/ftl-sdk/: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Jenkinsfile  LICENSE  README.md  build.bat
plugins/obs-outputs/ftl-sdk/ftl_app/: bitstream.c  bitstream.h  dec_obj.h  decode.c  decode.h  file_parser.c  file_parser.h  gettimeofday.c  gettimeofday.h  main.c  main.h  nalu.c  nalu.h  utils.c  utils.h
plugins/obs-outputs/ftl-sdk/ftl_app/posix/: ctrlc_handler.c
plugins/obs-outputs/ftl-sdk/ftl_app/win32/: ctrlc_handler.c  xgetopt.c  xgetopt.h
plugins/obs-outputs/ftl-sdk/libftl/: ftl-sdk.c  ftl.h  ftl_helpers.c  ftl_private.h  handshake.c  ingest.c  init.c  logging.c  media.c
plugins/obs-outputs/ftl-sdk/libftl/gettimeofday/: gettimeofday.c  gettimeofday.h
plugins/obs-outputs/ftl-sdk/libftl/hmac/: hmac.c  hmac.h  sha2.c  sha2.h
plugins/obs-outputs/ftl-sdk/libftl/posix/: socket.c  socket.h  threads.c  threads.h
plugins/obs-outputs/ftl-sdk/libftl/win32/: socket.c  socket.h  threads.c  threads.h
plugins/obs-outputs/librtmp/: md5.c  md5.h  rtmp.c  rtmp.h
plugins/obs-outputs/websocket-client/: CMakeLists.txt  CustomWebrtcImpl.cpp  CustomWebrtcImpl.h  MacOSVersion.h  MacOSVersion.mm  MillicastWebsocketClientImpl.cpp  MillicastWebsocketClientImpl.h  WebsocketClient.cpp  WebsocketClient.h
plugins/obs-outputs/websocket-client/restclient-cpp/include/restclient-cpp/: connection.h  version.h
plugins/obs-outputs/websocket-client/restclient-cpp/source/: connection.cc
plugins/obs-qsv11/: QSV_Encoder.cpp
plugins/obs-transitions/cmake/macos/: Info.plist.in
plugins/obs-vst/linux/: VSTPlugin-linux.cpp
plugins/rtmp-services/: CMakeLists.txt  rtmp-custom.c  rtmp-services-main.c  rtmp-webrtc-janus.c  webrtc-custom.c  webrtc-evercast.c  webrtc-janus.c  webrtc-millicast.c  webrtc-spankchain.c  webrtc-wowza.c
plugins/rtmp-services/cmake/: legacy.cmake
plugins/rtmp-services/data/: services.json
plugins/rtmp-services/data/schema/: service-schema-v3.json
plugins/rtmp-services/service-specific/: younow.h
plugins/websocket-client/: CMakeLists.txt  CustomWebrtc.h  CustomWebrtcImpl.cpp  CustomWebrtcImpl.h  Evercast.h  EvercastWebsocketClientImpl.cpp  EvercastWebsocketClientImpl.h  JanusWebsocketClientImpl.cpp  JanusWebsocketClientImpl.h  MillicastWebsocketClientImpl.cpp  MillicastWebsocketClientImpl.h  README.md  SpankChainWebsocketClientImpl.cpp  SpankChainWebsocketClientImpl.h  WebsocketClient.cpp  WebsocketClient.h  WebsocketClientImpl.cpp  WebsocketClientImpl.h  WebsocketClientSC.cpp  WebsocketClientSC.h  WowzaWebsocketClientImpl.cpp  WowzaWebsocketClientImpl.h  dllmain.cpp
plugins/websocket-client/websocketpp/transport/asio/security/: tls.hpp
plugins/win-capture/: nt-stuff.h
plugins/win-dshow/: CMakeLists.txt
test/: CMakeLists.txt
test/KITE/: CMakeFiles.txt  CMakeLists.txt  launchAppiumNode.bat.in  launchAppiumNode.sh.in  pom.xml
test/KITE/configs/: interop.config.json.in  rtmp.config.json.in
test/KITE/configs/appium/: node.json.in
test/KITE/service-sample/: service.json.in
test/KITE/src/main/java/io/cosmosoftware/kite/obs/: TestCoordinator.java
test/KITE/src/main/java/io/cosmosoftware/kite/obs/checks/: EncoderFieldDisabledCheck.java  MonitoringCheck.java  OutputAudioBitrateEnableCheck.java  OutputModeCheck.java  PeerConnectionCheck.java  RecordingAdvancedSectionCheck.java  RecordingButtonCheck.java  RecordingFunctionCheck.java  RecordingGeneralOutputOptionCheck.java  RecordingOutputSectionCheck.java  RecordingStatusCheck.java  ReplayButtonCheck.java  ReplayFunctionCheck.java  ReplayGeneralOutputOptionCheck.java  ReplayHotkeyOptionCheck.java  ReplayOutputSectionCheck.java  StereoAudioCheck.java  StreamTypeMillicastCheck.java  StreamingVideoDisplayCheck.java  StreamingVideoQualityCheck.java  VideoDefaultSettingCheck.java
test/KITE/src/main/java/io/cosmosoftware/kite/obs/pages/: MainPage.java  OBSViewerPage.java  Page.java  ViewerPage.java
test/KITE/src/main/java/io/cosmosoftware/kite/obs/steps/: ChangeBitrateStep.java  ChangeCodecStep.java  GetCpuUsageStep.java  GetStatsStep.java  IdlingStep.java  PrepareStreamStep.java  QuitApplicationStep.java  StartStreamingStep.java  StopStreamingStep.java
test/KITE/src/main/java/io/cosmosoftware/kite/obs/tests/: DevTest.java  OBSInteropTest.java  (+2 more)
test/cmocka/: CMakeLists.txt
(+525 files in other folders)
