option(ENABLE_PLUGINS "Enable building OBS plugins" ON)
if(NOT ENABLE_PLUGINS)
  obs_status(STATUS "Building with plugins disabled.")
  return()
endif()

function(check_obs_browser)
  if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/obs-browser/CMakeLists.txt)
    add_subdirectory(obs-browser)
  else()
    obs_status(FATAL_ERROR "obs-browser submodule not available.")
  endif()
endfunction()

# APPLE/WIN32/UNIX are soft-deprecated:
# https://discourse.cmake.org/t/platform-id-vs-win32-vs-cmake-system-name/1226/2
if(OS_WINDOWS)
  add_subdirectory(coreaudio-encoder)
  add_subdirectory(win-wasapi)
  add_subdirectory(win-dshow)
  add_subdirectory(win-capture)
  add_subdirectory(decklink)
  add_subdirectory(win-mf)
  add_subdirectory(obs-qsv11)
  add_subdirectory(obs-text)
  add_subdirectory(vlc-video)
  add_subdirectory(obs-vst)

  if(EXISTS "${CMAKE_CURRENT_LIST_DIR}/enc-amf/CMakeLists.txt")
    add_subdirectory(enc-amf)
  else()
    obs_status(WARNING "enc-amf plugin not found.")
  endif()
  if(MSVC)
    add_subdirectory(win-ivcam)
  endif()

  check_obs_browser()
elseif(OS_MACOS)
  add_subdirectory(coreaudio-encoder)
  add_subdirectory(mac-avcapture)
  add_subdirectory(mac-capture)
  add_subdirectory(mac-videotoolbox)
  add_subdirectory(mac-syphon)
  add_subdirectory(mac-virtualcam)
  add_subdirectory(decklink)
  add_subdirectory(vlc-video)
  add_subdirectory(linux-jack)
  add_subdirectory(obs-vst)

  check_obs_browser()
elseif(OS_LINUX)
  add_subdirectory(linux-capture)
  add_subdirectory(linux-pulseaudio)
  add_subdirectory(linux-v4l2)
  add_subdirectory(linux-jack)
  add_subdirectory(linux-alsa)
  add_subdirectory(linux-pipewire)
  add_subdirectory(decklink)
  add_subdirectory(vlc-video)
  add_subdirectory(sndio)
  add_subdirectory(obs-vst)

  check_obs_browser()
elseif(OS_FREEBSD)
  add_subdirectory(linux-capture)
  add_subdirectory(linux-pulseaudio)
  add_subdirectory(linux-v4l2)
  add_subdirectory(linux-jack)
  add_subdirectory(linux-alsa)
  add_subdirectory(vlc-video)
  add_subdirectory(oss-audio)
  add_subdirectory(sndio)

  obs_status(STATUS "obs-browser plugin not available.")
  obs_status(STATUS "obs-vst plugin not available.")
elseif(OS_OPENBSD)
  add_subdirectory(linux-capture)
  add_subdirectory(sndio)

  obs_status(STATUS "obs-browser plugin not available.")
  obs_status(STATUS "obs-vst plugin not available.")
endif()

if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/obs-websocket/CMakeLists.txt)
  add_subdirectory(obs-websocket)
else()
  obs_status(FATAL_ERROR "obs-websocket submodule not available.")
endif()

add_subdirectory(image-source)
add_subdirectory(obs-x264)
add_subdirectory(obs-libfdk)
add_subdirectory(obs-ffmpeg)
add_subdirectory(obs-outputs)
add_subdirectory(obs-filters)
add_subdirectory(obs-transitions)
add_subdirectory(rtmp-services)
add_subdirectory(text-freetype2)
add_subdirectory(aja)

option(BUILD_NDI "Build obs-ndi plugin" OFF)
if (BUILD_NDI)

  find_path(TOTO obs-frontend-api)
  message(STATUS "path to obs-frontend-api = ${TOTO}")
  cmake_path(GET "${CMAKE_BINARY_DIR}/UI/obs-frontend-api" FILENAME filename)
  message(STATUS "fichier 1 = ${filename}")
  cmake_path(GET "${CMAKE_BINARY_DIR}/UI/obs-frontend-api" FILENAME filename)
  message(STATUS "fichier 2 = ${filename}")
  cmake_path(GET "${CMAKE_BINARY_DIR}/UI/obs-frontend-api" FILENAME filename)
  message(STATUS "fichier 3 = ${filename}")
  cmake_path(GET "${CMAKE_BINARY_DIR}/UI/obs-frontend-api" FILENAME filename)
  message(STATUS "fichier 4 = ${filename}")
  cmake_path(GET "${CMAKE_BINARY_DIR}/UI/obs-frontend-api" FILENAME filename)
  message(STATUS "fichier 5 = ${filename}")
  cmake_path(GET "${CMAKE_BINARY_DIR}/UI/obs-frontend-api" FILENAME filename)
  message(STATUS "fichier 6 = ${filename}")
  cmake_path(GET "${CMAKE_BINARY_DIR}/UI/obs-frontend-api" FILENAME filename)
  message(STATUS "fichier 7 = ${filename}")
  cmake_path(GET "${CMAKE_BINARY_DIR}/UI/obs-frontend-api" FILENAME filename)
  message(STATUS "fichier 8 = ${filename}")

  if (NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/obs-ndi/CMakeLists.txt")
    execute_process(
      COMMAND           git submodule update --init --recursive
      WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
      RESULT_VARIABLE   _res
      )
    if(NOT _res EQUAL "0")
      message(FATAL_ERROR "git submodule update --init failed with ${_res}, please checkout submodules")
    endif()
  endif()
  set(LIBOBS_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
  add_subdirectory(obs-ndi)
endif()
